fix useTranslate, translateOptions func, add new translatedFiles, fix z-index of langSelect

--- a/src/shared/ui/Input/Select/ui/_InputSelect.module.scss
+++ b/src/shared/ui/Input/Select/ui/_InputSelect.module.scss
@@ -35,7 +35,7 @@
 
 .show {
     .options {
-        z-index: 1;
+        z-index: 2;
         opacity: 1;
     }
 }
